@@ -1,4 +1,8 @@
-﻿shmuel 17.06.2014 16:35:54 +0200 - build 375
+﻿shmuel 18.06.2014 20:47:47 +0200 - build 376
+
+1. Уточнение 366.
+
+shmuel 17.06.2014 16:35:54 +0200 - build 375
 
 1. Уточнение 372.
 
